# serializer version: 1
# name: test_all_entities[event.dashy_dashy_1_qgza68hnz4n1qvyz3iohynx05_docker_event-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'die',
        'kill',
        'oom',
        'pause',
        'restart',
        'start',
        'stop',
        'unpause',
        'update',
        'health_status_healthy',
        'health_status_unhealthy',
        'health_status_starting',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'event.dashy_dashy_1_qgza68hnz4n1qvyz3iohynx05_docker_event',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Docker event',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Docker event',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'docker_event',
    'unique_id': 'portainer_test_entry_123_dashy_dashy.1.qgza68hnz4n1qvyz3iohynx05_docker_event',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[event.dashy_dashy_1_qgza68hnz4n1qvyz3iohynx05_docker_event-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'die',
        'kill',
        'oom',
        'pause',
        'restart',
        'start',
        'stop',
        'unpause',
        'update',
        'health_status_healthy',
        'health_status_unhealthy',
        'health_status_starting',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'dashy_dashy.1.qgza68hnz4n1qvyz3iohynx05 Docker event',
    }),
    'context': <ANY>,
    'entity_id': 'event.dashy_dashy_1_qgza68hnz4n1qvyz3iohynx05_docker_event',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[event.focused_einstein_docker_event-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'die',
        'kill',
        'oom',
        'pause',
        'restart',
        'start',
        'stop',
        'unpause',
        'update',
        'health_status_healthy',
        'health_status_unhealthy',
        'health_status_starting',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'event.focused_einstein_docker_event',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Docker event',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Docker event',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'docker_event',
    'unique_id': 'portainer_test_entry_123_focused_einstein_docker_event',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[event.focused_einstein_docker_event-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'die',
        'kill',
        'oom',
        'pause',
        'restart',
        'start',
        'stop',
        'unpause',
        'update',
        'health_status_healthy',
        'health_status_unhealthy',
        'health_status_starting',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'focused_einstein Docker event',
    }),
    'context': <ANY>,
    'entity_id': 'event.focused_einstein_docker_event',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[event.funny_chatelet_docker_event-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'die',
        'kill',
        'oom',
        'pause',
        'restart',
        'start',
        'stop',
        'unpause',
        'update',
        'health_status_healthy',
        'health_status_unhealthy',
        'health_status_starting',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'event.funny_chatelet_docker_event',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Docker event',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Docker event',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'docker_event',
    'unique_id': 'portainer_test_entry_123_funny_chatelet_docker_event',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[event.funny_chatelet_docker_event-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'die',
        'kill',
        'oom',
        'pause',
        'restart',
        'start',
        'stop',
        'unpause',
        'update',
        'health_status_healthy',
        'health_status_unhealthy',
        'health_status_starting',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'funny_chatelet Docker event',
    }),
    'context': <ANY>,
    'entity_id': 'event.funny_chatelet_docker_event',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[event.practical_morse_docker_event-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'die',
        'kill',
        'oom',
        'pause',
        'restart',
        'start',
        'stop',
        'unpause',
        'update',
        'health_status_healthy',
        'health_status_unhealthy',
        'health_status_starting',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'event.practical_morse_docker_event',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Docker event',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Docker event',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'docker_event',
    'unique_id': 'portainer_test_entry_123_practical_morse_docker_event',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[event.practical_morse_docker_event-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'die',
        'kill',
        'oom',
        'pause',
        'restart',
        'start',
        'stop',
        'unpause',
        'update',
        'health_status_healthy',
        'health_status_unhealthy',
        'health_status_starting',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'practical_morse Docker event',
    }),
    'context': <ANY>,
    'entity_id': 'event.practical_morse_docker_event',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[event.serene_banach_docker_event-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'die',
        'kill',
        'oom',
        'pause',
        'restart',
        'start',
        'stop',
        'unpause',
        'update',
        'health_status_healthy',
        'health_status_unhealthy',
        'health_status_starting',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'event.serene_banach_docker_event',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Docker event',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Docker event',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'docker_event',
    'unique_id': 'portainer_test_entry_123_serene_banach_docker_event',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[event.serene_banach_docker_event-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'die',
        'kill',
        'oom',
        'pause',
        'restart',
        'start',
        'stop',
        'unpause',
        'update',
        'health_status_healthy',
        'health_status_unhealthy',
        'health_status_starting',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'serene_banach Docker event',
    }),
    'context': <ANY>,
    'entity_id': 'event.serene_banach_docker_event',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[event.stoic_turing_docker_event-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'die',
        'kill',
        'oom',
        'pause',
        'restart',
        'start',
        'stop',
        'unpause',
        'update',
        'health_status_healthy',
        'health_status_unhealthy',
        'health_status_starting',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'event.stoic_turing_docker_event',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Docker event',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Docker event',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'docker_event',
    'unique_id': 'portainer_test_entry_123_stoic_turing_docker_event',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[event.stoic_turing_docker_event-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'die',
        'kill',
        'oom',
        'pause',
        'restart',
        'start',
        'stop',
        'unpause',
        'update',
        'health_status_healthy',
        'health_status_unhealthy',
        'health_status_starting',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'stoic_turing Docker event',
    }),
    'context': <ANY>,
    'entity_id': 'event.stoic_turing_docker_event',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
